--- a/README
+++ b/README
@@ -1,2 +1,7 @@
 My very own Vim config.
 Use at your own risk :-D
+
+You must link the files:
+
+ln -sfn ~/.vim/vimrc .vimrc
+ln -sfn ~/.vim/gvimrc .gvimrc
